##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(hello)

##############################################################################
# Find Packages
##############################################################################

find_package(catkin REQUIRED COMPONENTS)

##############################################################################
# Project Configuration
##############################################################################

##############################################################################
# Catkin
##############################################################################

catkin_package()

##############################################################################
# Sources
##############################################################################

add_executable(hello hello.cpp)


