<package>
  <name>hello</name>
  <version>0.1.0</version>
  <description>
   Simple test hello catkin package.
  </description>
  <url type="repository">https://github.com/stonier/hello</url>
  <url type="bugtracker">https://github.com/stonier/hello/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>

